fix: vertical images taking up too much space

--- a/public/css/article.css
+++ b/public/css/article.css
@@ -14,6 +14,7 @@
 
 #banner img {
   width: 100%;
+  max-height: 50vh;
   object-fit: cover;
 }
 
